--- a/CTMTechTest/Views/Transactions/Index.cshtml
+++ b/CTMTechTest/Views/Transactions/Index.cshtml
@@ -15,7 +15,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
-            <th></th>
+            <th>Merchant</th>
         </tr>
     </thead>
     <tbody>
@@ -25,9 +25,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                @Html.DisplayFor(modelItem => item.Merchant.Name)
             </td>
         </tr>
 }
