--- a/CTMTechTest/Views/Shared/_Layout.cshtml
+++ b/CTMTechTest/Views/Shared/_Layout.cshtml
@@ -30,9 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Transactions" asp-action="Index">View Transactions</a></li>
+                    <li><a asp-area="" asp-controller="Merchants" asp-action="Create">Create New Merchant</a></li>
                 </ul>
             </div>
         </div>
